# QuantNexus

./: .gitignore  App.tsx  CHANGELOG-FRD-Shard-Creation.md  CLAUDE.md  FRD-Phase0-Branch-Generator-Bugs.md  FRD-Phase1-Split-Options.md  FRD-Phase2-Database-Shards.md  FRD-Phase3-Custom-Ticker-Lists.md  FRD-Phase4-Filters-Rebuild.md  OPTIMIZATION-IMPLEMENTATION-SUMMARY.md  PERFORMANCE-OPTIMIZATIONS.md  README-FRD-Shard-Creation.md  README.md  check_tree.js  complex_strategy.json  dry-run-result.json  package-lock.json  railway.toml  stress_test_100_import.json  stress_test_100_indicators.json  stress_test_10k.json  stress_test_10k_import.json  stress_test_10k_uncached_import.json  stress_test_1k_uncached.json  stress_test_4k_uncached.json  stress_test_500_bigtech.json  stress_test_500_uncached.json  stress_test_500_uncached_v2.json  stress_test_50_uncached.json  stress_test_7k_import.json  stress_test_all_indicators.json  stress_test_uncached.json  test_optimization.json
System.app/: .env.example  (+47 more)
rust-indicators/: BACKTEST_FIX_PLAN.md  Cargo.toml  PLAN.md  bench_batch.mjs  bench_cli_vs_wasm.mjs  bench_compute_only.py  bench_pandas.py  bench_pandas_vs_rust.py  bench_server_vs_wasm.mjs  bench_vectorized.py  bench_vectorized.sh  benchmark.mjs  compare_engines.mjs  package.json
rust-indicators/docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  PERFORMANCE.md  TECH_COMPARISON.md
rust-indicators/scripts/: aligned_ema_test.py  check_ema_unstable.py  compare_values.py  debug_adx.py  debug_differences.py  generate_js_reference.py  generate_reference_data.py  generate_stress_test.py
(+12591 files in other folders)
